corrected heading spacing

--- a/css/core/_header.scss
+++ b/css/core/_header.scss
@@ -14,7 +14,7 @@
 
     .container {
         position: relative;
-        padding: 3em 1em;
+        padding: 2.75em 1em;
     }
 
     .group {
